--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
 <body>
     <main>
         <div id="busan">
-            <h4>SUA PROXIMA VIAGEM</h4>
+            <h4>SUA PROXIMA VIAGEM:</h4>
             <h1>Conheça Busan</h1>
-            <img src="assets/busan.jpg" alt="cidade de busan">
+            <img src="assets/busan.jpg" alt="cidade de busan" class="busan">
             <p>Busan, a estrela em ascensão da Coreia do Sul, oferece de tudo, desde churrascarias de primeira linha até tradicionais barracas de comida de rua. Aqui, exploramos a segunda cidade da Coreia do Sul e descobrimos as suas ofertas culinárias.</p>
         </div>
 
-        <div id="divider"></div>
+        <div class="divider"></div>
 
         <div id="turistic">
             <h4>PARA OS AMANTES DE HISTÓRIA</h4>
@@ -27,46 +27,47 @@
             Os santuários budistas que pontilham a costa e as montanhas de Busan têm uma arquitetura impressionante que irá encantar os fotógrafos.</p>
 
             <ol>
-                <img src="assets/ponto-1.jpg" alt="Templo Haedong Yonggungsa">
+                <img src="assets/ponto-1.jpg" alt="Templo Haedong Yonggungsa" class="point">
                <li><h3>Templo Haedong Yonggungsa</h3></li>
                     <p>O Templo Haedong Yonggungsa é um templo budista localizado no extremo nordeste de Busan. Construído em 1376, é um dos poucos templos na Coreia construídos à beira-mar - você pode desfrutar de vistas do Mar do Leste de um lado e de belas montanhas do outro.
                     </p>
-
+                    <br>
                     <p><strong>Bom para:</strong></p>
                     <ul>
-                        <li>História</li>
+                        <li class="history">História</li>
                     </ul>
-                <img src="assets/ponto-2.jpg" alt="Templo Beomeo-sa">
+                <img src="assets/ponto-2.jpg" alt="Templo Beomeo-sa" class="point">
                 <li><h3>Templo Beomeo-sa</h3></li>
                     
                     <p>O Templo Beomeo-sa é um dos maiores santuários da Coreia do Sul. Ele está localizado no alto da borda leste da montanha Geumjeongsa e fica distante da agitação da cidade. O Daeungjeon Hall do templo é um exemplo bem preservado da arquitetura da Dinastia Joseon</p>
+                    <br>
                     <p><strong>Bom para:</strong></p>
                     <ul>
-                        <li>História</li>
+                        <li class="history">História</li>
                     </ul>
-                <img src="assets/ponto-3.jpg" alt="Parque Yongdusan">   
+                <img src="assets/ponto-3.jpg" alt="Parque Yongdusan" class="point">   
                <li><h3>Parque Yongdusan</h3></li>
                     <p>O Parque Yongdusan, localizado no centro de Busan, abriga alguns dos monumentos mais importantes da cidade. Você pode ver vistas espetaculares do topo da Torre Busan, de 120 metros de altura. O parque tem 2 museus – confira os instrumentos musicais tradicionais no Museum of World Folk Instruments e mais de 80 veleiros coreanos no Exhibition Hall of World Model Boats.</p>
-
+                    <br>
                     <p><strong>Bom para:</strong></p>
                     <ul>
-                        <li>Casais</li>
-                        <li>Famílias</li>
-                        <li>Orçamento</li>
+                        <li class="couple">Casais</li>
+                        <li class="family">Famílias</li>
+                        <li class="bud">Orçamento</li>
                     </ul>
 
             </ol>
         </div>
 
-        <div id="divider"></div>
+        <div class="divider"></div>
 
-        <p>
+        <p class="final">
             As melhores coisas para fazer em Busan mostram a reputação da cidade como um importante porto marítimo na Ásia. Frequentemente vista como a essência da Coreia do Sul, você experimentará uma atmosfera única em termos de diversidade étnica e cultural, já que a cidade recebe um público cosmopolita o ano todo.  
         </p>
 
         <footer>
             Feito com 
-            <img src="assets/Vector.svg" alt="coração">
+            <img src="assets/Vector.svg" alt="coração" class="footer">
             por Kauan!
         </footer>
     </main>
